force-app/main/default/objects/Refinery__c/Refinery__c.object-meta.xml
<CustomObject>
    <label>Refinery</label>
    <nameField>
        <label>Refinery Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Refineries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>