force-app/main/default/objects/Refinery__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Refineries</relationshipLabel>
    <relationshipName>Refineries</relationshipName>
    <type>Lookup</type>
</CustomField>