force-app/main/default/objects/Refinery__c/fields/Capacity_bpd__c.field-meta.xml
<CustomField>
    <fullName>Capacity_bpd__c</fullName>
    <label>Capacity bpd</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>