force-app/main/default/objects/Refinery__c/fields/Nelson_Complexity_Index__c.field-meta.xml
<CustomField>
    <fullName>Nelson_Complexity_Index__c</fullName>
    <label>Nelson Complexity Index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>