force-app/main/default/objects/Refinery__c/fields/PADD_District__c.field-meta.xml
<CustomField>
    <fullName>PADD_District__c</fullName>
    <label>PADD District</label>
    <type>Text</type>
    <length>255</length>
</CustomField>