force-app/main/default/objects/Refinery__c/fields/Units_List__c.field-meta.xml
<CustomField>
    <fullName>Units_List__c</fullName>
    <label>Units List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Crude</fullName>
            </value>
            <value>
                <fullName>Vacuum</fullName>
            </value>
            <value>
                <fullName>FCC</fullName>
            </value>
            <value>
                <fullName>Hydrocracker</fullName>
            </value>
            <value>
                <fullName>Reformer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>